[tool.poetry]
name = "udacity-computer-vision"
version = "0.1.0"
description = ""
authors = ["Roberto Fierimonte <roberto.fierimonte@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
numpy = "^2.1.3"
torch = "^2.5.1"
matplotlib = "^3.9.2"
torchvision = "^0.20.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pre-commit = "^4.0.1"
commitizen = "^4.0.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
